# perpetcal-api

./: Cargo.toml
src/: error_type.rs  ical_endpoint.rs  ical_json.rs  main.rs
