[package]
name = "perpetcal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icalendar = { version = "0.13.0", features = ["parser"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
reqwest = "0.11"
thiserror = "1"